task3/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ledger-api-default-deny
  namespace: payments
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ledger-api
      app.kubernetes.io/component: api
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals:
              - cluster.local/ns/payments/sa/reporting
